--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,16 +3,22 @@ description: A new Flutter project.
 publish_to: 'none' 
 version: 1.0.0+1
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  flutter_lints: 2.0.1
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  url_launcher: ^6.0.9
+  path_drawing: ^1.0.1
+  path_morph: 
+    git:
+      url: https://github.com/ikbendewilliam/path_morph_for_flutter
+      ref: 68c4ed3fa93000e03792f3af9a742b57b479301c
   rainbow_color: ^2.0.1
-  seo_renderer: ^0.6.0
+  url_launcher: ^6.0.9
   url_strategy: ^0.2.0
+  vector_math: 2.1.2
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +26,3 @@ dev_dependencies:
     
 flutter:
   uses-material-design: true
-  
-  
-  
-  
